# texturegenerator

./: .gitignore  README.md  build.py
.github/tools/: getversion.py
.github/workflows/: build_nightly_linux.yml  build_nightly_mac.yml  build_nightly_windows.yml  build_release_linux.yml  build_release_mac.yml  build_release_windows.yml  codeql-analysis.yml
docs/: building.md  data_types.md  nodes.md  system_design.md
src/: CMakeLists.txt  build.py  libraries.json  version.h.in
src/cmake/: catch2.cmake  libraries.cmake
src/nodes/: CMakeLists.txt
src/nodes/color/: CMakeLists.txt  color.cpp  color.h
src/nodes/color/tests/: CMakeLists.txt  color.cpp
src/nodes/create/: CMakeLists.txt  create.cpp  main.cpp
src/nodes/serialize/: CMakeLists.txt  image_format.h  serialize.cpp  serialize.h
src/nodes/serialize/tests/: CMakeLists.txt  serialize.cpp  test_config.h.in  util.cpp  util.h
src/nodes/shared/: CMakeLists.txt  color.cpp  color.h
src/nodes/shared/apis/image/: CMakeLists.txt  image.cpp  image.h
src/nodes/shared/graph/: CMakeLists.txt  factory.cpp  factory.h  graph.cpp  graph.h  node.cpp  node.h  node_types.h  parameter.cpp  parameter.h  parameters.cpp  parameters.h  socket.cpp  socket.h
src/nodes/shared/graph/sockets/: CMakeLists.txt  binary_stream.cpp  binary_stream.h  color.cpp  color.h  color_channel.cpp  color_channel.h  color_stream.cpp  color_stream.h
src/nodes/shared/graphics/: CMakeLists.txt  color.h
src/nodes/shared/tests/: CMakeLists.txt  util.cpp  util.h
src/nodes/shared/tests/apis/: CMakeLists.txt
src/nodes/shared/tests/apis/image/: CMakeLists.txt  image.cpp
src/nodes/shared/tests/graph/: CMakeLists.txt  factory.cpp  graph.cpp  parameter.cpp  parameters.cpp  socket.cpp
src/nodes/shared/tests/graph/sockets/: CMakeLists.txt  binary_stream.cpp  color.cpp  color_channel.cpp  color_stream.cpp
src/nodes/shared/tests/graphics/: CMakeLists.txt  color.cpp
src/runner/: CMakeLists.txt  main.cpp  runner.cpp  runner.h
src/runner/tests/: CMakeLists.txt  main.cpp  runner.cpp
